--- a/app/assets/stylesheets/_theme.scss
+++ b/app/assets/stylesheets/_theme.scss
@@ -72,6 +72,19 @@ main {
 .text-muted-1 {
   color: rgb(99, 115, 129);
 }
+// margin helpers
+.mt20 {
+  margin-top: 20px;
+}
+.mt40 {
+  margin-top: 40px;
+}
+.mt80 {
+  margin-top: 80px;
+}
+.mt100 {
+  margin-top: 100px;
+}
 // Icons
 .material-icons {
   font-family: 'Material Icons';
@@ -98,6 +111,58 @@ main {
   font-feature-settings: 'liga';
 }
 
+// inputs
+.input-field.input-outlined {
+  min-height: 70px;
+}
+.input-field.input-outlined {
+  > input {
+    border: 2px solid #eee;
+    padding: 12px 16px 14px;
+    width: calc(100% - 2.5rem);
+    float: none;
+    display: block;
+    border-radius: 8px;
+    height: 1.6rem;
+    transition: box-shadow, border-color 0.15s;
+    &:focus:not([readonly]) {
+      border-color: $primary-color;
+      box-shadow: 0 1px 0 0px $primary-color;
+    }
+  }
+  > label {
+    left: 27px;
+    display: inline-flex;
+    width: auto !important;
+    &.active {
+      background: white;
+      border-left: 4px solid white;
+      border-right: 4px solid white;
+      transform: translateY(-1.75rem);
+      top: 1rem;
+    }
+  }
+  input:not(.browser-default):focus:not([readonly]) + label {
+    color: $primary-color !important;
+  }
+}
+
+// Buttons
+.btn {
+  font-family: 'Be Vietnam';
+}
+.primary-btn {
+  background-color: $primary-color;
+  box-shadow: rgba(0, 171, 85, 0.24) 0px 8px 16px 0px;
+  min-width: 64px;
+  border-radius: 8px;
+  text-transform: none;
+}
+.primary-btn.full-width {
+  height: 48px;
+  line-height: 40px;
+  width: 100%;
+}
 // Logo container
 .brand-logo2 {
   padding: 10px 0;
@@ -229,4 +294,28 @@ ul.sidenav.sidenav-fixed {
       line-height: 22px;
     }
   }
+}
+
+.devise-left-paper {
+  width: 100%;
+  margin: 16px 0px;
+  max-width: 464px;
+  min-height: calc(100vh - 48px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: rgb(33, 43, 54);
+  overflow: hidden;
+  box-shadow: rgba(145, 158, 171, 0.24) 0px 0px 2px 0px,
+    rgba(145, 158, 171, 0.24) 0px 16px 32px -4px;
+  border-radius: 16px;
+  padding: 40px 40px 80px 40px;
+}
+.devise-right-paper {
+  padding: 80px 0 20px 0;
+}
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
