--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;600&display=swap');
 @import 'materialize/components/color-variables';
 $primary-color: color('green', 'base') !default;
-$secondary-color: color('yellow', 'base') !default;
+$secondary-color: color('green', 'base') !default;
 
 @font-face {
   font-family: 'Material Icons';
